--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "norse-corp-clone",
+  "version": "1.0.0",
+  "description": "Norse Corp Clone",
+  "scripts": {
+    "start": "node server/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Eythor Magnusson",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
   }
 }
